--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -17,14 +17,20 @@ jobs:
         env: 
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
-          VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
+          VITE_FIREBASE_PROJECT_ID: ${{ vars.VITE_FIREBASE_PROJECT_ID }}
           VITE_FIREBASE_STORAGE_BUCKET: ${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }}
           VITE_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}
           VITE_FIREBASE_APP_ID: ${{ secrets.VITE_FIREBASE_APP_ID }}
           VITE_FIREBASE_MEASUREMENT_ID: ${{ secrets.VITE_FIREBASE_MEASUREMENT_ID }}
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
+        id: deploy_preview # Add an ID to this step
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCOREMORE_E9DE6 }}
-          projectId: scoremore-e9de6
+          projectId: ${{ vars.VITE_FIREBASE_PROJECT_ID }}
+      - name: Add preview URL to Action Summary
+        if: steps.deploy_preview.outputs.preview_url # Only run if preview_url is set
+        run: |
+          echo "## Firebase Preview URL" >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.deploy_preview.outputs.preview_url }}" >> $GITHUB_STEP_SUMMARY
