--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,7 +18,7 @@ jobs:
         run: echo "COUNT=$(git rev-list --count HEAD)" >> $GITHUB_OUTPUT
       - run: npm ci && npm run build
         env: 
-          VITE_APP_VERSION: ${{ vars.APP_VERSION || 'nan' }}
+          VITE_APP_VERSION: ${{ vars.APP_VERSION || '0.0.1' }}
           VITE_BUILD_NUMBER: ${{ steps.commit_count.outputs.COUNT }}
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
