--- a/package.json
+++ b/package.json
@@ -7,7 +7,21 @@
     "dev": "npx vite",
     "build": "npx vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "prepare": "husky",
+    "security-check": "node scripts/security-check.mjs"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write",
+      "node scripts/security-check.mjs"
+    ],
+    "*.{json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "firebase": "^11.7.3",
@@ -22,16 +36,21 @@
     "@types/react-dom": "^18.3.1",
     "@types/sql.js": "^1.4.9",
     "@types/sqlite3": "^3.1.11",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "latest",
-    "eslint": "^8.50.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.0.0",
     "postcss": "latest",
+    "prettier": "^3.5.3",
     "tailwindcss": "3.4.17",
-    "typescript": "^5.5.4",
-    "vite": "^5.2.0"
+    "typescript": "^5.1.6",
+    "vite": "^6.3.5"
   }
 }
